$Revision: 1.43 $

v5_6_3 Sept. 7 2013
-------------------
	1. Provide a better workaround the use of new C++ constructs in 
	HLTConfigProvider etc. that causes codes using HelperFor not to
	compile. HelperFor no longer includes the HLTConfigProvider, Event,
	and ParameterSet headers. Instead HelperFor uses forward declarations 
	and the headers are included in the codes that include the header for 
	HelperFor.
	The hacked HLTConfigProvider header has been removed from the release.
	2. Add Sam's rmhelper.py script, which removes the specified helper from
	a local release.

	3. Now under git control. The new repository for TNM is at

		https://github.com/hbprosper/SusySapien.git 

v5_5_2 July 10 2013
-------------------
	1. Fix the Makefile created by mkanalyzer.py so that it is unnecessary
	to use LD_LIBRARY_PATH. Do this usig -Wl,-rparh,$(DEFAULT-PATH) switch 
	to the linker.
	2. Simplify mkanalzyer.py. This is possible because we now rely on the
	config file to provide unique names for objects.
	3. Verify that the analyzer compiles and runs both on SLC5 as well as
	on Darwin (a Mac).

v5_5_0 July 8 2013
------------------
	1. The language of the analyzer and the macro are now the same. In 
	particular, the analyzer now uses the initialize, select mechanism to
	declare objects to be selected and to select them. Since this is an
	important revision, we bump up the 2nd index.
	2. The utilities have been moved to a header <analyzer-mame>util.h.


v5_4_5 July 6 2013
------------------
	1. Fix bug in analyzer Makefile: make sure shared library name is
	lib<analyzer-name>.so
	2. Create a separate fill<object>() function for each struct.
	Example:
		fillGenParticle()
		fillGsfElectron()

	fillObjects() still exists. It simply calls all  fill object functions

v5_4_4 July 5 2013
------------------
	1. Names of structs taken as names given in the "buffers" list in the
	configuration file.
	2. The macro and analyzer now use exactly the same variables and structs
	
