@@ -45,6 +45,8 @@ collection	METv0
 collection	MaterialAccountingDetector
 collection	MaterialAccountingStep
 collection	MaterialAccountingTrack
+collection	PATMuPair
+collection	PATMuonNuPair
 collection	PCaloHit
 collection	PSimHit
 collection	ParticleBase
@@ -67,6 +69,44 @@ collection	TrajectorySeed
 collection	TtDilepEvtSolution
 collection	TtHadEvtSolution
 collection	TtSemiEvtSolution
+collection	cmg::AbstractPhysicsObject
+collection	cmg::BaseJet
+collection	cmg::BaseMET
+collection	cmg::DiElectron
+collection	cmg::DiFatJet
+collection	cmg::DiHemisphere
+collection	cmg::DiJet
+collection	cmg::DiMuon
+collection	cmg::DiMuonDiElectron
+collection	cmg::DiPFCandidate
+collection	cmg::DiPFJet
+collection	cmg::DiPhoton
+collection	cmg::DiTau
+collection	cmg::Electron
+collection	cmg::FatJet
+collection	cmg::GenJet
+collection	cmg::GenParticle
+collection	cmg::Hemisphere
+collection	cmg::METSignificance
+collection	cmg::MuEle
+collection	cmg::MultiObject
+collection	cmg::Muon
+collection	cmg::NamedObject
+collection	cmg::PFCandidate
+collection	cmg::PFJet
+collection	cmg::Photon
+collection	cmg::QuadElectron
+collection	cmg::QuadMuon
+collection	cmg::SimpleParticle
+collection	cmg::StructuredPFJet
+collection	cmg::Tau
+collection	cmg::TauEle
+collection	cmg::TauMu
+collection	cmg::TriMuonMET
+collection	cmg::TriggerObject
+collection	cmg::WENu
+collection	cmg::WMuNu
+collection	cmg::WTauNu
 collection	csc::L1Track
 collection	edm::DetSet<ClusterFP420>
 collection	edm::DetSet<EcalRecHit>
