@@ -1,4 +1,4 @@
-# Created: Sat Sep  7 15:53:08 2013
+# Created: Tue Sep 10 01:07:51 2013
 # Version: CMSSW_6_0_1
 ClassToHeaderMap = {\
 'ATest': 'PhysicsTools/TheNtupleMaker/interface/ClassFunction.h',
@@ -212,6 +212,12 @@ ClassToHeaderMap = {\
 'CombinationsInCond': 'DataFormats/L1GlobalTrigger/interface/L1GlobalTriggerObjectMapFwd.h',
 'CommonMETData': 'DataFormats/METReco/interface/CommonMETData.h',
 'CommonMETv0Data': 'DataFormats/METObjects/interface/CommonMETData.h',
+'CompositePtrCandidateT1T2MEt': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'CompositePtrCandidateT1T2MEt::T1Ptr': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'CompositePtrCandidateT1T2MEt::T2Ptr': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'CompositePtrCandidateTMEt': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateTMEt.h',
+'CompositePtrCandidateTMEt::METPtr': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateTMEt.h',
+'CompositePtrCandidateTMEt::TPtr': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateTMEt.h',
 'Cone': 'DataFormats/GeometrySurface/interface/Cone.h',
 'Cone::ConePointer': 'DataFormats/GeometrySurface/interface/Cone.h',
 'Cone::ConstConePointer': 'DataFormats/GeometrySurface/interface/Cone.h',
@@ -274,6 +280,7 @@ ClassToHeaderMap = {\
 'DeltaR': 'DataFormats/Math/interface/deltaR.h',
 'DetId': 'DataFormats/DetId/interface/DetId.h',
 'DetIdCollection': 'DataFormats/DetId/interface/DetIdCollection.h',
+'DiCandidatePair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
 'DigiCollectionFP420': 'DataFormats/FP420Digi/interface/DigiCollectionFP420.h',
 'DigiCollectionFP420::HDigiFP420Container': 'DataFormats/FP420Digi/interface/DigiCollectionFP420.h',
 'DigiCollectionFP420::IndexRange': 'DataFormats/FP420Digi/interface/DigiCollectionFP420.h',
@@ -669,6 +676,15 @@ ClassToHeaderMap = {\
 'OmniClusterRef::ClusterRegionalRef': 'DataFormats/TrackerRecHit2D/interface/OmniClusterRef.h',
 'OmniClusterRef::ClusterStripRef': 'DataFormats/TrackerRecHit2D/interface/OmniClusterRef.h',
 'OverlapChecker': 'DataFormats/Candidate/interface/OverlapChecker.h',
+'PATDiTauPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'PATElecMuPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'PATElecPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'PATElecTauPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'PATElectronNuPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateTMEt.h',
+'PATMuPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'PATMuTauPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateT1T2MEt.h',
+'PATMuonNuPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateTMEt.h',
+'PATTauNuPair': 'AnalysisDataFormats/CMGTools/interface/CompositePtrCandidateTMEt.h',
 'PCaloHit': 'SimDataFormats/CaloHit/interface/PCaloHit.h',
 'PCrossingFrame': 'SimDataFormats/CrossingFrame/interface/PCrossingFrame.h',
 'PEcalTBInfo': 'SimDataFormats/EcalTestBeam/interface/PEcalTBInfo.h',
@@ -1072,6 +1088,68 @@ ClassToHeaderMap = {\
 'ZDCRecHitRefs': 'DataFormats/HcalRecHit/interface/HcalRecHitFwd.h',
 'ZDCRecHitsRef': 'DataFormats/HcalRecHit/interface/HcalRecHitFwd.h',
 'ZeroError': 'DataFormats/GeometrySurface/interface/TrivialError.h',
+'cmg::AbstractPhysicsObject': 'AnalysisDataFormats/CMGTools/interface/AbstractPhysicsObject.h',
+'cmg::AbstractPhysicsObject::AbstractPhysicsObjectVisitor': 'AnalysisDataFormats/CMGTools/interface/AbstractPhysicsObject.h',
+'cmg::AbstractPhysicsObject::Strings': 'AnalysisDataFormats/CMGTools/interface/AbstractPhysicsObject.h',
+'cmg::BaseJet': 'AnalysisDataFormats/CMGTools/interface/BaseJet.h',
+'cmg::BaseJet::TagArray': 'AnalysisDataFormats/CMGTools/interface/BaseJet.h',
+'cmg::BaseJet::TagNameArray': 'AnalysisDataFormats/CMGTools/interface/BaseJet.h',
+'cmg::BaseMET': 'AnalysisDataFormats/CMGTools/interface/BaseMET.h',
+'cmg::BaseMET::GenMET': 'AnalysisDataFormats/CMGTools/interface/BaseMET.h',
+'cmg::DiElectron': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiFatJet': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiHemisphere': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiJet': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiMuon': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiMuonDiElectron': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiObject': 'AnalysisDataFormats/CMGTools/interface/DiObject.h',
+'cmg::DiObject::type1': 'AnalysisDataFormats/CMGTools/interface/DiObject.h',
+'cmg::DiObject::type2': 'AnalysisDataFormats/CMGTools/interface/DiObject.h',
+'cmg::DiObjectPair': 'AnalysisDataFormats/CMGTools/interface/DiObjectPair.h',
+'cmg::DiPFCandidate': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiPFJet': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiPhoton': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::DiTau': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::Electron': 'AnalysisDataFormats/CMGTools/interface/Electron.h',
+'cmg::FatJet': 'AnalysisDataFormats/CMGTools/interface/FatJet.h',
+'cmg::FatJet::SrcPtr': 'AnalysisDataFormats/CMGTools/interface/FatJet.h',
+'cmg::GenJet': 'AnalysisDataFormats/CMGTools/interface/GenericTypes.h',
+'cmg::GenJetPtr': 'AnalysisDataFormats/CMGTools/interface/GenericTypes.h',
+'cmg::GenParticle': 'AnalysisDataFormats/CMGTools/interface/GenericTypes.h',
+'cmg::GenParticlePtr': 'AnalysisDataFormats/CMGTools/interface/GenericTypes.h',
+'cmg::Hemisphere': 'AnalysisDataFormats/CMGTools/interface/Hemisphere.h',
+'cmg::Hemisphere::SrcPtr': 'AnalysisDataFormats/CMGTools/interface/Hemisphere.h',
+'cmg::Lepton': 'AnalysisDataFormats/CMGTools/interface/Lepton.h',
+'cmg::METSignificance': 'AnalysisDataFormats/CMGTools/interface/METSignificance.h',
+'cmg::MuEle': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::MultiObject': 'AnalysisDataFormats/CMGTools/interface/MultiObject.h',
+'cmg::MultiObject::SrcPtr': 'AnalysisDataFormats/CMGTools/interface/MultiObject.h',
+'cmg::Muon': 'AnalysisDataFormats/CMGTools/interface/Muon.h',
+'cmg::NamedObject': 'AnalysisDataFormats/CMGTools/interface/NamedObject.h',
+'cmg::PFCandidate': 'AnalysisDataFormats/CMGTools/interface/GenericTypes.h',
+'cmg::PFCandidatePtr': 'AnalysisDataFormats/CMGTools/interface/GenericTypes.h',
+'cmg::PFJet': 'AnalysisDataFormats/CMGTools/interface/PFJet.h',
+'cmg::PFJet::PuIdArray': 'AnalysisDataFormats/CMGTools/interface/PFJet.h',
+'cmg::PFJet::PuIdNames': 'AnalysisDataFormats/CMGTools/interface/PFJet.h',
+'cmg::PFJet::PuMvaArray': 'AnalysisDataFormats/CMGTools/interface/PFJet.h',
+'cmg::PFJetComponent': 'AnalysisDataFormats/CMGTools/interface/PFJetComponent.h',
+'cmg::Photon': 'AnalysisDataFormats/CMGTools/interface/Photon.h',
+'cmg::PhysicsObjectWithPtr': 'AnalysisDataFormats/CMGTools/interface/PhysicsObject.h',
+'cmg::PhysicsObjectWithPtr::value': 'AnalysisDataFormats/CMGTools/interface/PhysicsObject.h',
+'cmg::QuadElectron': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::QuadMuon': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::SimpleParticle': 'AnalysisDataFormats/CMGTools/interface/SimpleParticle.h',
+'cmg::StructuredPFJet': 'AnalysisDataFormats/CMGTools/interface/StructuredPFJet.h',
+'cmg::Tau': 'AnalysisDataFormats/CMGTools/interface/Tau.h',
+'cmg::Tau::Constituent': 'AnalysisDataFormats/CMGTools/interface/Tau.h',
+'cmg::Tau::Constituents': 'AnalysisDataFormats/CMGTools/interface/Tau.h',
+'cmg::TauEle': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::TauMu': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::TriMuonMET': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::TriggerObject': 'AnalysisDataFormats/CMGTools/interface/TriggerObject.h',
+'cmg::WENu': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::WMuNu': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
+'cmg::WTauNu': 'AnalysisDataFormats/CMGTools/interface/CompoundTypes.h',
 'cms::CRC32Calculator': 'FWCore/Utilities/interface/CRC32Calculator.h',
 'cms::Digest': 'FWCore/Utilities/interface/Digest.h',
 'cms::Exception': 'FWCore/Utilities/interface/Exception.h',
@@ -2084,6 +2162,7 @@ ClassToHeaderMap = {\
 'pat::Electron': 'DataFormats/PatCandidates/interface/Electron.h',
 'pat::Electron::IdPair': 'DataFormats/PatCandidates/interface/Electron.h',
 'pat::ElectronCollection': 'DataFormats/PatCandidates/interface/Electron.h',
+'pat::ElectronPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::ElectronRef': 'DataFormats/PatCandidates/interface/Electron.h',
 'pat::ElectronRefVector': 'DataFormats/PatCandidates/interface/Electron.h',
 'pat::EventHypothesis': 'DataFormats/PatCandidates/interface/EventHypothesis.h',
@@ -2114,6 +2193,7 @@ ClassToHeaderMap = {\
 'pat::JetCollection': 'DataFormats/PatCandidates/interface/Jet.h',
 'pat::JetCorrFactors': 'DataFormats/PatCandidates/interface/JetCorrFactors.h',
 'pat::JetCorrFactors::CorrectionFactor': 'DataFormats/PatCandidates/interface/JetCorrFactors.h',
+'pat::JetPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::JetRef': 'DataFormats/PatCandidates/interface/Jet.h',
 'pat::JetRefVector': 'DataFormats/PatCandidates/interface/Jet.h',
 'pat::L1Seed': 'DataFormats/PatCandidates/interface/TriggerPath.h',
@@ -2124,15 +2204,18 @@ ClassToHeaderMap = {\
 'pat::MET': 'DataFormats/PatCandidates/interface/MET.h',
 'pat::MET::UncorInfo': 'DataFormats/PatCandidates/interface/MET.h',
 'pat::METCollection': 'DataFormats/PatCandidates/interface/MET.h',
+'pat::METPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::METRef': 'DataFormats/PatCandidates/interface/MET.h',
 'pat::METRefVector': 'DataFormats/PatCandidates/interface/MET.h',
 'pat::MHT': 'DataFormats/PatCandidates/interface/MHT.h',
 'pat::MHTCollection': 'DataFormats/PatCandidates/interface/MHT.h',
 'pat::Muon': 'DataFormats/PatCandidates/interface/Muon.h',
 'pat::MuonCollection': 'DataFormats/PatCandidates/interface/Muon.h',
+'pat::MuonPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::MuonRef': 'DataFormats/PatCandidates/interface/Muon.h',
 'pat::MuonRefVector': 'DataFormats/PatCandidates/interface/Muon.h',
 'pat::PATObject': 'DataFormats/PatCandidates/interface/PATObject.h',
+'pat::PATPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::PFCandidateFwdPtrCollection': 'DataFormats/PatCandidates/interface/Jet.h',
 'pat::PFParticle': 'DataFormats/PatCandidates/interface/PFParticle.h',
 'pat::PFParticleCollection': 'DataFormats/PatCandidates/interface/PFParticle.h',
@@ -2147,6 +2230,7 @@ ClassToHeaderMap = {\
 'pat::Photon::IdPair': 'DataFormats/PatCandidates/interface/Photon.h',
 'pat::Photon::IsoDepositPairs': 'DataFormats/PatCandidates/interface/Photon.h',
 'pat::PhotonCollection': 'DataFormats/PatCandidates/interface/Photon.h',
+'pat::PhotonPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::PhotonRef': 'DataFormats/PatCandidates/interface/Photon.h',
 'pat::PhotonRefVector': 'DataFormats/PatCandidates/interface/Photon.h',
 'pat::TagInfoFwdPtrCollection': 'DataFormats/PatCandidates/interface/Jet.h',
@@ -2155,6 +2239,7 @@ ClassToHeaderMap = {\
 'pat::TauCollection': 'DataFormats/PatCandidates/interface/Tau.h',
 'pat::TauJetCorrFactors': 'DataFormats/PatCandidates/interface/TauJetCorrFactors.h',
 'pat::TauJetCorrFactors::CorrectionFactor': 'DataFormats/PatCandidates/interface/TauJetCorrFactors.h',
+'pat::TauPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::TauRef': 'DataFormats/PatCandidates/interface/Tau.h',
 'pat::TauRefVector': 'DataFormats/PatCandidates/interface/Tau.h',
 'pat::TriggerAlgorithm': 'DataFormats/PatCandidates/interface/TriggerAlgorithm.h',
@@ -2182,6 +2267,7 @@ ClassToHeaderMap = {\
 'pat::TriggerObjectMatchContainer': 'DataFormats/PatCandidates/interface/TriggerObject.h',
 'pat::TriggerObjectMatchMap': 'DataFormats/PatCandidates/interface/TriggerObject.h',
 'pat::TriggerObjectMatchRefProd': 'DataFormats/PatCandidates/interface/TriggerObject.h',
+'pat::TriggerObjectPtr': 'AnalysisDataFormats/CMGTools/interface/PatTypes.h',
 'pat::TriggerObjectRef': 'DataFormats/PatCandidates/interface/TriggerObject.h',
 'pat::TriggerObjectRefProd': 'DataFormats/PatCandidates/interface/TriggerObject.h',
 'pat::TriggerObjectRefVector': 'DataFormats/PatCandidates/interface/TriggerObject.h',
