@@ -1,5 +1,10 @@
 $Revision: 1.43 $
 
+v5_6_4 Sept.10 2013
+-------------------
+	1. Better workaround works for 6_0_0, but fails for 7_0_0_pre2. Try using
+	more forwarded classes.
+
 v5_6_3 Sept. 7 2013
 -------------------
 	1. Provide a better workaround the use of new C++ constructs in 
